objects/Case.object
<CustomObject>
    <fields>
        <fullName>Points_of_Sale__c</fullName>
        <label>Points of Sale</label>
        <picklist>
            <picklistValues>
                <fullName>1-Expedia United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-Expedia United Kingdom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-Expedia Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-Expedia Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7-Expedia Voyages-sncf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8-Expedia Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9-Expedia Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-Expedia Netherlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12-Expedia Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14-Expedia Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15-Expedia Malaysia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16-Expedia South Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17-Expedia Thailand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20-Expedia France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25-Expedia Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26-Hotwire.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27-Expedia India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28-Expedia Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29-Expedia New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60-Expedia Rewards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>63-Expedia Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>64-Expedia Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>65-Expedia Sweden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>66-Expedia Norway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>67-Expedia Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>69-Expedia Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70-Expedia Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30001-WWTE United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30003-WWTE Alaska Airlines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30004-WWTE United Kingdom</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Post_Closure_Report__c</fullName>
        <formula>IF(IsClosed,HYPERLINK(&quot;/00O50000001LRTx?&amp;pv0=&quot;&amp;CaseNumber, &quot;Open Report&quot;),&quot;N/A - Case Still Open&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Post-Closure Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Category__c</fullName>
        <label>Primary Category</label>
        <picklist>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swimming Pool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accessibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balcony</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cruise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excursions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Explosion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ForceMajeure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hygiene</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <picklist>
            <picklistValues>
                <fullName>EEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spam/Newsletters/Duplicates</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proof_of_Submission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proof of Submission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <description>Rank from GSO Org</description>
        <label>Rank</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rates_Entered_Date__c</fullName>
        <description>Date tracking when Rates have been entered</description>
        <label>Rates Entered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_Missed_SLA__c</fullName>
        <description>Reasons why SLA was missed.  Dependent upon a &quot;No&quot; answer from the &quot;Met SAL&quot; field</description>
        <label>Reason Missed SLA</label>
        <picklist>
            <controllingField>Met_SLA__c</controllingField>
            <picklistValues>
                <fullName>Clarification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Delayed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed / No Reply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Images / VT Not Live</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referring_Bug_ID__c</fullName>
        <label>Referring Bug ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referring_Bug_Tracker__c</fullName>
        <label>Referring Bug Tracker</label>
        <picklist>
            <controllingField>Case_Category__c</controllingField>
            <picklistValues>
                <fullName>RAID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JIRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Refund_Status__c</fullName>
        <label>Refund Status</label>
        <picklist>
            <picklistValues>
                <fullName>Insufficient Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to Process</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relocation_Reason__c</fullName>
        <label>Relocation Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Accessibility Requirements Unavailable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel Price Guarantee Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotwire Relocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance/Remodeling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer a Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opaque Relocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opaque Walks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other-Add Comments Submittal Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Hotel Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overbooking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proactive Fallback Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System/Process Failure Expedia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System/Process Failure Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Venere Kickback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtual Credit Card Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weather Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wyndham Request – Room Type/Rate Plan not avail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wyndham Request – Room Type/Rate Plan invalid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wyndham Request – CTA (Closed to Arrival)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wyndham Request – MLOS (Min. Length of Stay) Not Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wyndham Request – Hotel Closed/Damaged/Terminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wyndham Request – Max Occupancy Exceeded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wyndham Request – Overbooked/Oversold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wyndham Request – Other (Reason not listed)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unbearable Conditions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relocation_Type__c</fullName>
        <label>Relocation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Relocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enroute Walk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enroute Relocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Room type NA/Change Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Reservation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Submittal_Notes__c</fullName>
        <label>Request Submittal Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>365</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>365 &amp; Adjustment $1,000 - $4,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>365 &amp; Adjustment $50- $999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>365 &amp; Adjustment &lt; $49</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>365 &amp; Adjustment over $5,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjustment $1,000 - $4,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjustment $50 - $999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjustment &lt; $50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjustment over $5,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution_Type__c</fullName>
        <description>Master resolution categories</description>
        <label>Resolution Type</label>
        <picklist>
            <picklistValues>
                <fullName>Compliance &amp; Recovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EVC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expedia Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplier Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor Banking</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <picklist>
            <controllingField>Resolution_Type__c</controllingField>
            <picklistValues>
                <fullName>Account Management / Provided Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Review Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Review Project 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Upated (Contact info only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Updated (No payments on hold)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Updated (Vouchers / Payment Released)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added Vendor to EVC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjustment Made for Double Payment / Payment Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affidavit Returned - Cashed Correctly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affidavit Returned - Expedia Recovered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Already on EVC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit Covers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Procedure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Procedure / Provided Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Block Placed On Card by Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Block Placed on Card by Provider / Adjust Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Block Placed on Card by Provider / Chase: Clear Authorization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breakage Reset / 00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Declining due to MCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Declining due to MCC / Adjust Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Fishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Fishing / Advised Hotel of Card Restrictions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Fishing / Escalate to Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charging Before Check-In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charging Before Check-In / Advised Hotel of Card Restrictions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charging Before Check-In / Provide Info/EVC Restrictions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charging on a Diff Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charging on a Diff Hotel / Adjust Credit Card</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Responsible_for_Error__c</fullName>
        <label>Responsible for Error</label>
        <picklist>
            <picklistValues>
                <fullName>DS fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expedia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLA_Due_Date_ECD__c</fullName>
        <label>SLA Due Date (ECD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Search_booking_date_end__c</fullName>
        <label>Search booking date end</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Search_booking_date_start__c</fullName>
        <label>Search booking date start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Secondary_Category__c</fullName>
        <label>Secondary Category</label>
        <picklist>
            <controllingField>Primary_Category__c</controllingField>
            <picklistValues>
                <fullName>General Poor Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broken glass in and around the pool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diving accident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fatality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of signage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Near Drowning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No depth markings (or worn away)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obstructions in the water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slips/Trips/Falls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suction/Entrapment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unclean / cloudy pool water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driver error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeeps and car hire unsafe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not enough seating on coaches for guests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seat belt issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accessibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excessive gaps over 100mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fall from a balcony</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts of balcony missing/disintegrating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Structural Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under 1 metre in height</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cots broken or unsafe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defective play equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Highchairs broken or unsafe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of supervision from Children’s Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric shocks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faulty Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loose or exposed wiring</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Selling_Model__c</fullName>
        <label>Selling Model</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>EEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GDS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_Auto_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean indicating if autoresponse should be sent so we can use auto response rules along with email blacklisting logic in apex. Will be set in Apex.</description>
        <label>Send Auto Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stack_Rank__c</fullName>
        <label>Stack Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_reason__c</fullName>
        <label>Sub-reason</label>
        <picklist>
            <controllingField>Reason</controllingField>
            <picklistValues>
                <fullName>Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activate new user</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deactivate user</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Password reset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black list request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loop / bounce-back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SuperRegion__c</fullName>
        <formula>Account.Super_Region__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SuperRegion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Super_Region_Lookup__c</fullName>
        <label>Super Region</label>
        <referenceTo>Super_Region__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Super_Region__c</fullName>
        <label>Super Region</label>
        <picklist>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Category__c</fullName>
        <description>Task Category from GSO Org</description>
        <label>Task Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <description>Identifies team case is assinged to</description>
        <label>Team</label>
        <picklist>
            <picklistValues>
                <fullName>Air CPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Fulfillment Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airline Debit Memos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breakage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance &amp; Recovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Loading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC Help</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Destination services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecom NewTrade Product Creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecom NewTrade Rollout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecom NewTrade TSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EID/VID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elite Plus VIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EQC Help</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expedia Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expedia Virtual Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fare Filing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FinOps EVC Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSO - Athens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSO - Dallas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSO - Kuala Lumpur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSO - Prague</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSO - Springfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel Content</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TempOwnerId__c</fullName>
        <label>TempOwnerId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_With_Customer__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The time in business hours that this case spent in the hands of the customer.</description>
        <inlineHelpText>The time in business hours that this case spent in the hands of the customer.</inlineHelpText>
        <label>Time With Customer</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_With_Support__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The time in business hours that this case spent with support.</description>
        <inlineHelpText>The time in business hours that this case spent with support.</inlineHelpText>
        <label>Time With Support</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
</CustomObject>